[install]
prefix=/usr/share/collectd/fluentd-collectd-plugin
install-lib=/usr/share/collectd/fluentd-collectd-plugin

[bdist_rpm]
doc_files = LICENSE README.md
install-script = scripts/rpm-post-install.sh

[nosetests]
with-coverage=1
cover-package=collectd_fluentd
cover-min-percentage=90

[flake8]
exclude = .git,.tox,build,dist
max-line-length=200

[metadata]
license-file = LICENSE
