[bdist_rpm]
release = 1
vendor = Acquia, Inc.
packager = Acquia Engineering <engineering@acquia.com>
provides = collectd-fluentd

[install]
prefix=/usr/share/collectd/fluentd-collectd-plugin/
install-scripts=/usr/share/collectd/fluentd-collectd-plugin/
install-lib=/usr/share/collectd/fluentd-collectd-plugin/

[nosetests]
with-coverage=1
cover-package=collectd_fluentd

[flake8]
exclude = .git,.tox,build,dist
max-line-length=200

[metadata]
license = Apache v2
license-file = LICENSE
